[package]
name = "ripwc"
version = "0.1.0"
edition = "2021"
authors = ["GCNull"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.6", features = ["derive"] }

walkdir = "2.3.2"

[profile.release]
lto = 'fat'
codegen-units = 1
opt-level = 3
panic = 'abort'
incremental = true